# ska-low-mccs-daq-interface

./: .coverage  .gitignore  .readthedocs.yaml  CHANGELOG  CODEOWNERS  LICENSE  Makefile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
docs/src/: conf.py  index.rst
docs/src/api/: client.rst  index.rst  server.rst
src/ska_low_mccs_daq_interface/: __init__.py  client.py  server.py
src/ska_low_mccs_daq_interface/generated_code/: daq_pb2.py  daq_pb2.pyi  daq_pb2_grpc.py
src/ska_low_mccs_daq_interface/protos/: daq.proto
tests/: __init__.py
tests/unit/: __init__.py  test_client_server.py  test_version.py
